Update after 2 years

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-   
-   <canvas></canvas>
+  <div id="ui">
+    <div id="score">Score: 0</div>
+    <div id="gameOver" class="hidden">💀 GAME OVER 💀<br><button onclick="restartGame()">Restart</button></div>
+  </div>
+  <canvas></canvas>
+  <script src="script.js"></script>
+</body>
 
-
-
-    <script src="script.js"></script>
-    </body>
  </html>
